web/feat: ajusts in sign out modal.
