# server/src/routes/index.ts
@@ -1,14 +1,14 @@
-import { Router } from 'express';
-import { authenticateRoutes } from './authenticate.routes';
-import { categoriesRoutes } from './categories.routes';
-import { specificationsRoutes } from './specification.routes';
-import { usersRoutes } from './users.routes';
+import { Router } from 'express'
+import { authenticateRoutes } from './authenticate.routes'
+import { categoriesRoutes } from './categories.routes'
+import { accountsRoutes } from './specification.routes'
+import { usersRoutes } from './users.routes'
 
-const router = Router();
+const router = Router()
 
-router.use('/categories', categoriesRoutes);
-router.use('/specifications', specificationsRoutes);
-router.use('/users', usersRoutes);
-router.use(authenticateRoutes);
+router.use('/categories', categoriesRoutes)
+router.use('/accounts', accountsRoutes)
+router.use('/users', usersRoutes)
+router.use(authenticateRoutes)
 
-export { router };
+export { router }
